--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.9.1",
     "sweetalert2": "^11.7.32",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
